@@ -38,7 +38,9 @@ table.types th { border: 1px solid; padding: .1em .25em; }
 </td><td></td></tr><tr><td>jovisa</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.jovisa.biz/images/egg%20dpf%20or%20copy.jpg">Link</a>
 </td><td></td></tr><tr><td>sevendayshop_pebble</td><td>128 x 128</td><td>No</td><td><a href="http://www.7dayshop.com/7dayshop-pebble-digital-photo-frame-1-5-tft-keyring-version-silver-irresistible-price">Link</a>
 </td><td></td></tr><tr><td>sunluxy</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.amazon.fr/gp/product/B00AQV277C/">Link</a>
-</td><td></td></tr><tr><td>veovision</td><td>128 x 128</td><td>Yes</td><td></td><td></td></tr><tr><td>zipp_dp605</td><td>128 x 128</td><td>In menu</td><td></td><td>Sold in Australia by Big W / Woolworths.
+</td><td></td></tr><tr><td>veovision</td><td>128 x 128</td><td>Yes</td><td></td><td></td></tr><tr><td>xg4241</td><td>128 x 128</td><td>In menu</td><td><a href="http://dicksmith.com.au/product/XG4241/dick-smith-1-5-quot-digital-photo-frame-keyring">Link</a>
+</td><td>Does not use standard LcdInit. Direct lcd access (NOT using otp_lcd_write).
+</td></tr><tr><td>zipp_dp605</td><td>128 x 128</td><td>In menu</td><td></td><td>Sold in Australia by Big W / Woolworths.
 </td></tr><tr><td>focalprice144</td><td>128 x 144</td><td>In menu</td><td></td><td></td></tr><tr><td>coby_dp180</td><td>160 x 128</td><td>In menu</td><td><a href="http://www.cobyusa.com/?p=prod&amp;prod_num_id=411&amp;pcat_id=4001">Link</a>
 </td><td></td></tr><tr><td>delightdigi_2_portrait</td><td>240 x 320</td><td>Yes</td><td><a href="http://www.ebay.com/itm/280736717264">Link</a>
 </td><td>Portrait mode, different enclosure, battery powered
@@ -46,7 +48,7 @@ table.types th { border: 1px solid; padding: .1em .25em; }
 </td><td>Portrait mode, different enclosure, battery powered
 </td></tr><tr><td>linkdelight_black_portrait_2</td><td>240 x 320</td><td>Yes</td><td></td><td>Variation of linkdelight_black_portrait
 </td></tr><tr><td>linkdelight_black_portrait_3</td><td>240 x 320</td><td>Yes</td><td><a href="http://www.ebay.com/itm/230670117410">Link</a>
-</td><td>Variation of linkdelight_black_portrait
+</td><td>Another variation of linkdelight_black_portrait
 </td></tr><tr><td>yallstock_black_portrait</td><td>240 x 320</td><td>Yes</td><td><a href="http://www.ebay.com/itm/400391394538">Link</a>
 </td><td></td></tr><tr><td>dx104500</td><td>320 x 240</td><td>No</td><td><a href="http://www.dealextreme.com/p/stylish-a33-2-4-lcd-desktop-digital-photo-picture-frame-album-silver-16mb-104500">Link</a>
 </td><td>May crash on USB connect/disconnect
@@ -59,7 +61,9 @@ table.types th { border: 1px solid; padding: .1em .25em; }
 </td></tr><tr><td>dx21334a</td><td>320 x 240</td><td>Yes</td><td><a href="http://www.dealextreme.com/p/2-4-lcd-desktop-digital-photo-frame-and-calendar-27-picture-memory-storage-21334">Link</a>
 </td><td></td></tr><tr><td>dx21334b</td><td>320 x 240</td><td>Yes</td><td><a href="http://www.dealextreme.com/p/2-4-lcd-desktop-digital-photo-frame-and-calendar-27-picture-memory-storage-21334">Link</a>
 <a href="http://www.ebay.de/itm/160792780280">Link</a>
-</td><td></td></tr><tr><td>linkdelight</td><td>320 x 240</td><td>Yes</td><td><a href="http://www.ebay.de/itm/ws/eBayISAPI.dll?ViewItem&amp;rd=1&amp;item=260978964426&amp;ssPageName=STRK:MEAFB:IT">Link</a>
+</td><td></td></tr><tr><td>focal_custom</td><td>320 x 240</td><td>Yes</td><td></td><td>Replaces deprecated type focal
+</td></tr><tr><td>focal_custom_2</td><td>320 x 240</td><td>Yes</td><td></td><td>Replaces deprecated type focal
+</td></tr><tr><td>linkdelight</td><td>320 x 240</td><td>Yes</td><td><a href="http://www.ebay.de/itm/ws/eBayISAPI.dll?ViewItem&amp;rd=1&amp;item=260978964426&amp;ssPageName=STRK:MEAFB:IT">Link</a>
 <a href="http://www.ebay.de/itm/New-Mini-2-4-inch-Digital-Time-Day-Calendar-Alarm-Clock-Photo-Frame-POF16-/260883908884?pt=LH_DefaultDomain_0&amp;hash=item3cbde48914#ht_4709wt_1046">Link</a>
 </td><td></td></tr><tr><td>linkdelight_2</td><td>320 x 240</td><td>Yes</td><td><a href="http://www.ebay.de/itm/ws/eBayISAPI.dll?ViewItem&amp;rd=1&amp;item=260883908884">Link</a>
 </td><td>Variation of linkdelight
